# x509-2-pgp

./: AUTHORS  COPYING  ChangeLog  LICENSE  README  README.md  autogen.sh  configure.ac
inc/: osslimpl.h  pgpimpl.h  pkcs11impl.h  pkcs11t.h  tests.h  utils.h  x509-2-pgp.h
man/: x509-2-pgp.1
src/: Makefile.am  main.c  osslimpl.c  pgpimpl.c  pkcs11impl.c  tests.c  utils.c  wintools.cpp
win32/: x509-2-pgp.sln  x509-2-pgp.vcxproj  x509-2-pgp.vcxproj.filters
